--- a/index.html
+++ b/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ecommerce grid</title>
-    <link rel="stylesheet" href="./assets/css/style.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Ecommerce</title>
+  <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-  <div class="hola grid-container">
-    <nav>Mi ecommerce</nav>
-    <aside>aside</aside>
-    <main>main</main>
-    <footer>footer</footer>
+  <div class="contenedor">
+    <header>My Ecommerce</header>
+    <aside></aside>
+    <main>
+      <div class="cards-container"></div>
+    </main>
+    <footer></footer>
   </div>
 </body>
 </html>
