creation the list in aside

--- a/index.html
+++ b/index.html
@@ -10,7 +10,17 @@
 <body>
   <div class="contenedor">
     <header>My Ecommerce</header>
-    <aside></aside>
+    <aside>
+      <div class="lista">
+      <h3>Categorías </h3>
+      <ul>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ul>
+    </div>
+    </aside>
     <main>
       <div class="cards-container"></div>
     </main>
