structure branch principal, add sistem grid

--- a/index.html
+++ b/index.html
@@ -22,7 +22,32 @@
     </div>
     </aside>
     <main>
-      <div class="cards-container"></div>
+      <section class="cards-container">
+        <div>
+          <img src="./assets/img/perfume01.jpg" alt="">
+          <h3>Perfume myKingdom</h3>
+          <p>31.400</p>
+          <button> Comprar</button>
+        </div>
+        <div>
+          <img src="./assets/img/perfume02.jpg" alt="">
+          <h3>Perfume Phantom</h3>
+          <p>68.900</p>
+          <button> Comprar</button>
+        </div>
+        <div>
+          <img src="./assets/img/shoes01.jpg" alt="">
+          <h3>Zapatos Docker</h3>
+          <p>29.700</p>
+          <button> Comprar</button>
+        </div>
+        <div>
+          <img src="./assets/img/hoodie01.jpg" alt="">
+          <h3>Polerón puma</h3>
+          <p>44.700</p>
+          <button> Comprar</button>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </div>
