--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <p>@miecommerce</p>
+    </footer>
   </div>
 </body>
 </html>
